Spacing fixed on coming soon section

--- a/assets/styles/media-queries.css
+++ b/assets/styles/media-queries.css
@@ -11,6 +11,15 @@
     }
 }
 
+@media (max-width: 992px){
+    #reviews p{
+        width: 80vw;
+    }
+    #reviews img{
+        width: 80vw;
+    }
+}
+
 @media (max-width: 768px){
     .stroke{
         -webkit-text-stroke-width: 2px;
@@ -30,11 +39,8 @@
     #about p{
         padding: 0px 50px;
     }
-    #reviews p{
-        width: 80vw;
-    }
-    #reviews img{
-        width: 80vw;
+    #coming-soon img{
+        height: 40vh;
     }
 }
 
@@ -51,5 +57,8 @@
     }
     #reviews img{
         width: 85vw;
+    }
+    #coming-soon img{
+        height: 30vh;
     }
 }
