--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -157,7 +157,6 @@ body{
 
 #coming-soon img{
     height: 50vh;
-    display: inline;
     position: absolute;
 }
 
